--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^1.7.4",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "firebase": "^8.2.1",
     "framer-motion": "^5",
     "next": "^12.0.7",
     "react": "latest",
